--- a/templates/docker-compose.yml.ejs
+++ b/templates/docker-compose.yml.ejs
@@ -1,10 +1,10 @@
 services:
   api:
     build: .
-    container_name: sara-<% appId %>
+    container_name: sara-<%= appId %>
     restart: always
     networks:
-      - appnet-<% appId %>
+      - saranet-<%= appId %>
     environment:
       - DB_USER=${SERVICE_USER_POSTGRES}
       - DB_PASSWORD=${SERVICE_PASSWORD_POSTGRES}
@@ -18,19 +18,19 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: sara-postgres-<% appId %>
+    container_name: sara-postgres-<%= appId %>
     restart: always
     networks:
-      - appnet-<% appId %>
+      - saranet-<%= appId %>
     environment:
       POSTGRES_USER: ${SERVICE_USER_POSTGRES}
       POSTGRES_PASSWORD: ${SERVICE_PASSWORD_POSTGRES}
       POSTGRES_DB: ${SERVICE_USER_POSTGRES}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata-<%= appId %>:/var/lib/postgresql/data
       - ./src/db/init:/docker-entrypoint-initdb.d
 
 volumes:
-  pgdata:
+  pgdata-<%= appId %>:
 networks:
-  appnet-<% appId %>:
+  saranet-<%= appId %>:
